--- a/DFSmartLightLife/miniprogram/pages/index/index.wxml
+++ b/DFSmartLightLife/miniprogram/pages/index/index.wxml
@@ -7,27 +7,37 @@
 <view class="cu-bar bg-white solid-bottom margin-top">
   <view class="action">
     <text class="cuIcon-titles text-orange "></text> 在线充值
-    <text class="text-sm text-red">话费慢充 1-72小时到账 请耐心等待</text>
+    <text class="text-sm text-red margin-left-sm">话费慢充 1-72小时到账 请耐心等待</text>
   </view>
 </view>
-<view class="cu-bar input padding-left-lg solid-bottom">
-  <input class="text-xxxl" maxlength="11" placeholder="输入号码自动匹配" />
+<view class="cu-form-group solid-bottom">
+  <view class="cuIcon-phone text-cus margin-right-sm text-red"></view>
+  <input class="text-cus" maxlength="11" type="number" bindinput="bindKeyInput" placeholder="输入号码自动匹配运营商" />
+  <view class="cu-capsule radius" wx:if="{{isShow === true}}">
+    <view class="cu-tag bg-blue">{{mobileInfo.province}}</view>
+    <view class="cu-tag line-blue">{{mobileInfo.catName}}</view>
+  </view>
 </view>
 <view class="cu-list grid col-3">
-  <view class="cu-item">
-    <view class="text-xxl text-red">50</view>
-    <text>售价 46.5元</text>
-  </view>
-  <view class="cu-item">
-    <view class="text-xxl text-red">100</view>
-    <text>售价 93元</text>
-  </view>
-  <view class="cu-item">
-    <view class="text-xxl text-red">200 </view>
-    <text>售价 186元</text>
-  </view>
+  <block wx:for="{{rechList}}" wx:key="index">
+    <view class="cu-item" bindtap="goRechMobile" data-rechPar="{{item.rechPar}}" data-rechDiscount="{{item.rechDiscount}}">
+      <view class="text-xxl text-red">
+        <view class="cu-tag badge">
+          <block>{{item.rechDiscount*10}}折</block>
+        </view>
+        <view class="margin-top">{{item.rechPar}}</view>
+      </view>
+      <text>售价 {{item.rechPar*item.rechDiscount}}元</text>
+    </view>
+  </block>
 </view>
 <view class="cu-bar bg-white solid-bottom margin-top">
+  <view class='action'>
+    <text class='cuIcon-titles text-orange '></text> 操作记录
+  </view>
+</view>
+
+<!-- <view class="cu-bar bg-white solid-bottom margin-top">
   <view class="action">
     <text class="cuIcon-titles text-orange "></text> 推荐服务
   </view>
@@ -41,8 +51,8 @@
     </view>
     <text>{{item.name}}</text>
   </view>
-</view>
-<view class="cu-bar bg-white solid-bottom margin-top">
+</view> -->
+<!-- <view class="cu-bar bg-white solid-bottom margin-top">
   <view class='action'>
     <text class='cuIcon-titles text-orange '></text> 推荐阅读
   </view>
@@ -60,6 +70,40 @@
           <view class="cu-tag bg-red light sm round">正义天使</view>
           <view class="cu-tag bg-green light sm round">史诗</view>
         </view>
+      </view>
+    </view>
+  </view>
+</view> -->
+<view class="cu-modal show" wx:if="{{showModal === true}}">
+  <view class="cu-dialog">
+    <view class="cu-bar bg-white justify-end">
+      <view class="content text-xl">确认充值信息</view>
+      <view class="action" bindtap="setModal">
+        <text class="cuIcon-close text-red"></text>
+      </view>
+    </view>
+    <view class="padding-sm">
+      <view class="text-df text-red padding-sm bg-orange light radius">温馨提示：请仔细核对号码，充错号码无法退回，慢充72小时内到账</view>
+      <view class="text-xxl light padding-top">{{modalData.mobile}}</view>
+      <view class="flex solid-bottom padding-sm justify-between">
+        <view>充值产品：</view>
+        <view>全国慢充{{modalData.rechPar}}元</view>
+      </view>
+      <view class="flex solid-bottom padding-sm justify-between">
+        <view>付款金额：</view>
+        <view  class="text-red text-lg">{{modalData.rechPar*modalData.rechDiscount}}元</view>
+      </view>
+      <view class="bg-gray padding-sm radius text-left">
+        <view>1.话费慢充1-72小时到账，快充1-30分钟到账。</view>
+        <view>2.请认真核对充值号码，充错号码将无法退回或转存。</view>
+        <view>3.本充值服务为代办业务，最终由运营商为终端用户提供发票（话费使用完后在运营商APP申请发票）。</view>
+      </view>
+      <view class="padding-top-sm padding-bottom-sm">
+        <button class="cu-btn bg-red margin-tb-sm lg" open-type="contact">确认购买</button>
+      </view>
+      <view>
+        <checkbox class="radius chagesize orange" checked></checkbox>
+        <text>我已阅读并同意<text class="text-orange" bindtap="">《隐私政策》</text></text>
       </view>
     </view>
   </view>
