--- a/DFSmartLightLife/miniprogram/pages/myPage/myPage.wxml
+++ b/DFSmartLightLife/miniprogram/pages/myPage/myPage.wxml
@@ -3,7 +3,7 @@
     <button open-type="getUserInfo" bindgetuserinfo="onGetUserInfo" class="userinfo-avatar" style="background-image: url({{avatarUrl}})" size="default" ></button>
     <view class="text-xl">
       <span wx:if='{{logged === true}}'>欢迎,{{userInfo.nickName}}</span>
-      <span wx:else>登录(点击登录)</span>
+      <span wx:else>登录(点击头像登录)</span>
     </view>
     <image bindtap="loginAdminManager" src="/images/wave.gif" mode="scaleToFill" class="gif-wave"></image>
   </view>
