--- a/DFSmartLightLife/miniprogram/pages/index/index.wxml
+++ b/DFSmartLightLife/miniprogram/pages/index/index.wxml
@@ -31,7 +31,7 @@
     </view>
   </block>
 </view>
-<!-- <view class="cu-bar bg-white solid-bottom margin-top">
+<view class="cu-bar bg-white solid-bottom margin-top">
   <view class="action">
     <text class="cuIcon-titles text-orange "></text> 推荐服务
   </view>
@@ -45,7 +45,7 @@
     </view>
     <text>{{item.name}}</text>
   </view>
-</view> -->
+</view>
 <!-- <view class="cu-bar bg-white solid-bottom margin-top">
   <view class='action'>
     <text class='cuIcon-titles text-orange '></text> 推荐阅读
